--- a/lab00_canvas_test_09_dec/index.html
+++ b/lab00_canvas_test_09_dec/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <script src="main.js" defer></script>
+  <script src="canvas_play.js" defer></script>
   <!-- 'defer' will make the code 'run' after the body -->
   
   <!-- ! and then TAB! -->
