--- a/00canvas_play/index.html
+++ b/00canvas_play/index.html
@@ -16,7 +16,7 @@
     <main>
         
       <div id="div_left_canvas">        
-        <script src="canvas.js" defer></script>          
+        <script src="canvas_test.js" defer></script>          
         <canvas width="800" height="800" id='canvas'>
         </canvas>
       </div>
